--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
-<title>ウェブサンプル株式会社</title>
+<title>フォトグラファー | Goshi Itahara</title>
 </head>
 <body>
     <h1>ウェブサンプル株式会社</h1>
