--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@
 </head>
 <body>
     <h1>ウェブサンプル株式会社</h1>
-    
+
+    <!-- メインメニュー -->
     <ul>
         <li>ホーム</li>
         <li>製品紹介</li>
@@ -43,6 +44,6 @@
                 あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
                 あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
                 </p>
-<small>Copyright (c) ウェブサンプル株式会社 All Rights Reserved.</small>
+<small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
 </body>
 </html>
