change to my own site

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
 <title>フォトグラファー | Goshi Itahara</title>
 </head>
 <body>
-    <h1>ウェブサンプル株式会社</h1>
+    <h1>Goshi Itahara</h1>
 
     <!-- メインメニュー -->
     <ul id="menu">
         <li>ホーム</li>
-        <li>製品紹介</li>
-        <li>会社概要</li>
+        <li>プロフィール</li>
+        <li>ギャラリー</li>
         <li>お問合せ</li>
         </ul>
 
