--- a/index.html
+++ b/index.html
@@ -10,10 +10,10 @@
 
     <!-- メインメニュー -->
     <ul id="menu">
-        <li>ホーム</li>
-        <li>プロフィール</li>
-        <li>ギャラリー</li>
-        <li>お問合せ</li>
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="profile.html">プロフィール</a></li>
+        <li><a href="gallery.html">ギャラリー</a></li>
+        <li><a href="contact.html">お問合せ</a></li>
         </ul>
 
         <h2>新着情報</h2>
