--- a/gallery.html
+++ b/gallery.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="base.css">
 <title>ギャラリー｜Goshi Itahara</title>
 </head>
 <body>
