--- a/profile.html
+++ b/profile.html
@@ -2,6 +2,7 @@
 <html>
 <head>
 <meta charset="UTF-8">
+<link rel="stylesheet" href="base.css">
 <title>プロフィール｜Goshi Itahara</title>
 </head>
 <body>
