--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 <title>フォトグラファー | Goshi Itahara</title>
 </head>
 <body>
+<div id="pagebody">
     <h1>Goshi Itahara</h1>
 
     <!-- メインメニュー -->
@@ -44,6 +45,8 @@
                 あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
                 あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
                 </p>
-<small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
+            <small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
+            
+</div>
 </body>
 </html>
