--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
 </head>
 <body>
 <div id="pagebody">
-    <h1>Goshi Itahara</h1>
+
+    <!-- ヘッダ -->
+    <h1></h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
 
     <!-- メインメニュー -->
     <ul id="menu">
