--- a/index.html
+++ b/index.html
@@ -9,7 +9,9 @@
 <div id="pagebody">
 
     <!-- ヘッダ -->
+    <div id="header"></div>
     <h1></h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
+    </div>
 
     <!-- メインメニュー -->
     <ul id="menu">
