--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <!-- ヘッダ -->
     <div id="header"></div>
-    <h1></h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
+    <h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
     </div>
 
     <!-- メインメニュー -->
