--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <div id="pagebody">
 
     <!-- ヘッダ -->
-    <div id="header"></div>
+    <div id="header">
     <h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
     </div>
 
