--- a/index.html
+++ b/index.html
@@ -21,6 +21,10 @@
         <li><a href="contact.html">お問合せ</a></li>
         </ul>
 
+    <!-- ヘッダ画像 -->
+	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。">
+
+    <!-- インフォメーション -->
         <h2>新着情報</h2>
             <h3>新商品のご案内</h3>
                 <p>
