change png scale

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </ul>
 
     <!-- ヘッダ画像 -->
-	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。">
+	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="1000" height="667">
 
     <!-- インフォメーション -->
         <h2>新着情報</h2>
