--- a/index.html
+++ b/index.html
@@ -22,7 +22,9 @@
         </ul>
 
     <!-- ヘッダ画像 -->
+    <div id="img_index">
 	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+    </div>
 
     <!-- インフォメーション -->
         <h2>新着情報</h2>
