--- a/index.html
+++ b/index.html
@@ -28,33 +28,13 @@
 
     <!-- インフォメーション -->
         <h2>新着情報</h2>
-            <h3>新商品のご案内</h3>
+            <h3>2021 SUPER GT Rd.8 富士スピードウェイ</h3>
                 <p>
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
+                <img src="images/index0001.png" alt="CALSONIC" class="infoimg_index">
+                2021年11月27/28日に富士スピードウェイで開催された、「2021 AUTOBACS SUPER GT ROUND8 FUJIMAKI GROUP FUJI GT300KM RACE」の撮影に行ってまいりました。
+                狙ったのは、個人的に推しているCALSONIC（GT500）とグッドスマイルレーシング（GT300）。特にCALSONIC含むGT-R勢はラストランだったので、撮り納しました。
                 </p>
-            <h3>展示会への出展</h3>
-                <p>
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                </p>
-            <h3>環境への取り組み</h3>
-                <p>
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ、あいうえおかきくけこさしすせそ。
-                </p>
+            
             <small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
             
 </div>
