--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
 	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
     </div>
 
+    <!-- サブメニュー -->
+	    <h2>新着情報</h2>
+	    <ul>
+		    <li><a href="#info0001">2021 SUPER GT Rd.8 富士スピードウェイ</a></li>
+	    </ul>
+
     <!-- インフォメーション -->
         <h2>新着情報</h2>
             <h3>2021 SUPER GT Rd.8 富士スピードウェイ</h3>
