--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 	    </ul>
 
     <!-- インフォメーション -->
-            <h3>2021 SUPER GT Rd.8 富士スピードウェイ</h3>
+            <h3 id="info0001">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
                 <p>
                 <img src="images/index0001.png" alt="CALSONIC" class="infoimg_index">
                 2021年11月27/28日に富士スピードウェイで開催された、「2021 AUTOBACS SUPER GT ROUND8 FUJIMAKI GROUP FUJI GT300KM RACE」の撮影に行ってまいりました。
