add div submenu & info

--- a/index.html
+++ b/index.html
@@ -26,13 +26,16 @@
 	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
     </div>
 
-    <!-- サブメニュー -->
+    <!-- サブメニュー（左カラム） -->
+	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
 		    <li><a href="#info0001">2021 SUPER GT Rd.8 富士スピードウェイ</a></li>
 	    </ul>
+    </div>
 
-    <!-- インフォメーション -->
+    <!-- インフォメーション（右カラム） -->
+	<div id="info">
             <h3 id="info0001">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
                 <p>
                 <img src="images/index0001.png" alt="CALSONIC" class="infoimg_index">
@@ -40,8 +43,10 @@
                 狙ったのは、個人的に推しているCALSONIC（GT500）とグッドスマイルレーシング（GT300）。特にCALSONIC含むGT-R勢はラストランだったので、撮り納しました。
                 </p>
                 <hr>
-            
-            <small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
+    </div>
+
+    <!-- フッタ -->     
+    <small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
             
 </div>
 </body>
