--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </div>
 
     <!-- フッタ -->     
-    <small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small>
+    <div id="footer"><small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small></div>
             
 </div>
 </body>
