--- a/index.html
+++ b/index.html
@@ -30,17 +30,26 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0001">2021 SUPER GT Rd.8 富士スピードウェイ</a></li>
+		    <li><a href="#info0002">2021 SUPER GT R8 FUJI SPEEDWEY</a></li>
+            <li><a href="#info0001">2020 TOKYO ブルーインパルス</a></li>
 	    </ul>
     </div>
 
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
-            <h3 id="info0001">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
+            <h3 id="info0002">2021 SUPER GT R8 FUJI SPEEDWEY</h3>
                 <p>
-                <img src="images/index0001.png" alt="CALSONIC" class="infoimg_index">
+                <img src="images/index0002.png" alt="CALSONIC" class="infoimg_index">
                 2021年11月27/28日に富士スピードウェイで開催された、「2021 AUTOBACS SUPER GT ROUND8 FUJIMAKI GROUP FUJI GT300KM RACE」の撮影に行ってまいりました。
                 狙ったのは、個人的に推しているCALSONIC（GT500）とグッドスマイルレーシング（GT300）。特にCALSONIC含むGT-R勢はラストランだったので、撮り納しました。
+                </p>
+                <hr>
+
+            <h3 id="info0001">2020 TOKYO ブルーインパルス</h3>
+                <p>
+                <img src="images/index0001.png" alt="2020TOKYO" class="infoimg_index">
+                2021年7月23日の2020東京オリンピック開会式の日に合わせて、航空自衛隊のアクロバット飛行チーム「ブルーインパルス」がスモークを使った飛行を行いました。
+                五輪マークを描くのは57年ぶりで、生きている間に見れるのは最後かもということで、東京タワー周辺で撮影をしてきました。
                 </p>
                 <hr>
     </div>
