--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002">2021 SUPER GT R8 FUJI SPEEDWEY</a></li>
+		    <li><a href="#info0002">2021 SUPER GT R8 FUJI SP…</a></li>
             <li><a href="#info0001">2020 TOKYO ブルーインパルス</a></li>
 	    </ul>
     </div>
