--- a/index.html
+++ b/index.html
@@ -30,14 +30,14 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002">2021 SUPER GT R8 FUJI SP…</a></li>
+		    <li><a href="#info0002">2021 SUPER GT Rd.8 富士ス…</a></li>
             <li><a href="#info0001">2020 TOKYO ブルーインパルス</a></li>
 	    </ul>
     </div>
 
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
-            <h3 id="info0002">2021 SUPER GT R8 FUJI SPEEDWEY</h3>
+            <h3 id="info0002">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
                 <p>
                 <img src="images/index0002.png" alt="CALSONIC" class="infoimg_index">
                 2021年11月27/28日に富士スピードウェイで開催された、「2021 AUTOBACS SUPER GT ROUND8 FUJIMAKI GROUP FUJI GT300KM RACE」の撮影に行ってまいりました。
