--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002">2021 SUPER GT Rd.8 富士ス…</a></li>
-            <li><a href="#info0001">2020 TOKYO ブルーインパルス</a></li>
+		    <li><a href="#info0002">2021 SUPER GT Rd.8 富…</a></li>
+            <li><a href="#info0001">2020 TOKYO ブルーイン…</a></li>
 	    </ul>
     </div>
 
