--- a/profile.html
+++ b/profile.html
@@ -3,9 +3,50 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
-<title>プロフィール｜Goshi Itahara</title>
+<title>フォトグラファー | Goshi Itahara</title>
 </head>
 <body>
-<h1>プロフィール</h1>
+<div id="pagebody">
+
+    <!-- ヘッダ -->
+    <div id="header">
+    <h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
+    </div>
+
+    <!-- メインメニュー -->
+    <ul id="menu">
+        <li><a href="index.html">ホーム</a></li>
+        <li><a href="profile.html">プロフィール</a></li>
+        <li><a href="gallery.html">ギャラリー</a></li>
+        <li><a href="contact.html">お問合せ</a></li>
+        </ul>
+
+    <!-- ヘッダ画像 -->
+    <div id="img_index">
+	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+    </div>
+
+    <!-- サブメニュー（左カラム） -->
+	<div id="submenu">
+	    <h2>新着情報</h2>
+	    <ul>
+		    <li><a href="#info0002">2021 SUPER GT Rd.8 富…</a></li>
+            <li><a href="#info0001">2020 TOKYO ブルーイン…</a></li>
+	    </ul>
+    </div>
+
+    <!-- インフォメーション（右カラム） -->
+	<div id="info">
+            <h3 id="info0002">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
+                <hr>
+
+            <h3 id="info0001">2020 TOKYO ブルーインパルス</h3>
+                <hr>
+    </div>
+
+    <!-- フッタ -->     
+    <div id="footer"><small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small></div>
+            
+</div>
 </body>
 </html>
