--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
 
     <!-- メインメニュー -->
     <ul id="menu">
-        <li><a href="index.html">ホーム</a></li>
-        <li><a href="profile.html">プロフィール</a></li>
-        <li><a href="gallery.html">ギャラリー</a></li>
-        <li><a href="contact.html">お問合せ</a></li>
+        <li><a href="index.html">ホーム/Home</a></li>
+        <li><a href="profile.html">プロフィール/Profile</a></li>
+        <li><a href="gallery.html">ギャラリー/Gallery</a></li>
+        <li><a href="contact.html">お問合せ/Contact</a></li>
         </ul>
 
     <!-- ヘッダ画像 -->
