--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
         <li><a href="index.html">ホーム/Home</a></li>
         <li><a href="profile.html">プロフィール/Profile</a></li>
         <li><a href="gallery.html">ギャラリー/Gallery</a></li>
+        <li><a href="blog.html">ブログ/Blog</a></li>
         <li><a href="contact.html">お問合せ/Contact</a></li>
         </ul>
 
