--- a/profile.html
+++ b/profile.html
@@ -18,8 +18,10 @@
         <li><a href="index.html">ホーム/Home</a></li>
         <li><a href="profile.html">プロフィール/Profile</a></li>
         <li><a href="gallery.html">ギャラリー/Gallery</a></li>
+        <li><a href="blog.html">ブログ/Blog</a></li>
         <li><a href="contact.html">お問合せ/Contact</a></li>
         </ul>
+
 
     <!-- ヘッダ画像 -->
     <div id="img_index">
