change name gi to itap

--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
-<title>ブログ｜Goshi Itahara</title>
+<title>ブログ｜iTAP</title>
 </head>
 <body>
 <h1>ブログ</h1>
