--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
-<title>お問合せ｜Goshi Itahara</title>
+<title>お問合せ｜iTAP</title>
 </head>
 <body>
 <h1>お問合せ</h1>
