--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="base.css">
-    <title>フォトグラファー | Goshi Itahara</title>
+    <title>フォトグラファー | iTAP</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51063829-1"></script>
@@ -21,7 +21,7 @@
 
     <!-- ヘッダ -->
     <div id="header">
-    <h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
+    <h1><a href="index.html"><img src="images/logo.png" alt="iTAP"></a></h1>
     </div>
 
     <!-- メインメニュー -->
@@ -67,7 +67,7 @@
     </div>
 
     <!-- フッタ -->     
-    <div id="footer"><small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small></div>
+    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
             
 </div>
 </body>
