--- a/profile.html
+++ b/profile.html
@@ -3,14 +3,14 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
-<title>プロフィール/Profile | Goshi Itahara</title>
+<title>プロフィール/Profile | iTAP</title>
 </head>
 <body>
 <div id="pagebody">
 
     <!-- ヘッダ -->
     <div id="header">
-    <h1><a href="index.html"><img src="images/logo.png" alt="Goshi Itahara"></a></h1>
+    <h1><a href="index.html"><img src="images/logo.png" alt="iTAP"></a></h1>
     </div>
 
     <!-- メインメニュー -->
@@ -47,7 +47,7 @@
     </div>
 
     <!-- フッタ -->     
-    <div id="footer"><small>Copyright (c) 2021 Goshi Itahara All Rights Reserved.</small></div>
+    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
             
 </div>
 </body>
