--- a/profile.html
+++ b/profile.html
@@ -24,25 +24,29 @@
 
 
     <!-- ヘッダ画像 -->
-    <div id="img_index">
-	<img src="./images/img_index.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+    <div id="img_subpage">
+	<img src="./images/img_profile.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
     </div>
 
     <!-- サブメニュー（左カラム） -->
 	<div id="submenu">
-	    <h2>新着情報</h2>
+	    <h2>プロフィール</h2>
 	    <ul>
-		    <li><a href="#info0002">2021 SUPER GT Rd.8 富…</a></li>
-            <li><a href="#info0001">2020 TOKYO ブルーイン…</a></li>
+		    <li><a href="#info0003">基本情報</a></li>
+            <li><a href="#info0002">所持機材</a></li>
+            <li><a href="#info0001">撮影対象</a></li>
 	    </ul>
     </div>
 
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
-            <h3 id="info0002">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
+            <h3 id="info0003">基本情報</h3>
                 <hr>
 
-            <h3 id="info0001">2020 TOKYO ブルーインパルス</h3>
+            <h3 id="info0002">所持機材</h3>
+                <hr>
+
+            <h3 id="info0001">撮影対象</h3>
                 <hr>
     </div>
 
