--- a/profile.html
+++ b/profile.html
@@ -25,7 +25,7 @@
 
     <!-- ヘッダ画像 -->
     <div id="img_subpage">
-	<img src="./images/img_profile.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+	<img src="./images/img_profile.png" alt="画像が正しく表示されていません。設定をご確認ください。">
     </div>
 
     <!-- サブメニュー（左カラム） -->
