change jp to en

--- a/profile.html
+++ b/profile.html
@@ -30,7 +30,7 @@
 
     <!-- サブメニュー（左カラム） -->
 	<div id="submenu">
-	    <h2>プロフィール</h2>
+	    <h2>Profile</h2>
 	    <ul>
 		    <li><a href="#info0003">基本情報</a></li>
             <li><a href="#info0002">所持機材</a></li>
