add profile contents

--- a/profile.html
+++ b/profile.html
@@ -16,10 +16,10 @@
     <!-- メインメニュー -->
     <ul id="menu">
         <li><a href="index.html">ホーム/Home</a></li>
-        <li><a href="profile.html">プロフィール/Profile</a></li>
         <li><a href="gallery.html">ギャラリー/Gallery</a></li>
         <li><a href="blog.html">ブログ/Blog</a></li>
         <li><a href="contact.html">お問合せ/Contact</a></li>
+        <li><a href="profile.html">プロフィール/Profile</a></li>
         </ul>
 
 
@@ -41,12 +41,51 @@
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
             <h3 id="info0003">基本情報</h3>
-                <hr>
+            <table>
+                <tr>
+                <th>名前</th>
+                <td>
+                iTAP(アイタップ)
+                </td>
+                </tr>
+
+                <tr>
+                <th>経歴</th>
+                <td>
+                2003年東京生まれ<br>
+                2016より本格的に写真撮影・映像制作を開始<br>
+                高校イベント・空手道大会の撮影・配信を経験<br>
+                Mail：itapmovie@gmail.com
+                </td>
+                </tr>
+            </table>
 
             <h3 id="info0002">所持機材</h3>
+            <table>
+                <tr>
+                <th>ボディ</th>
+                <td>Nikon Z 9 , Z 6</td></tr>
+
+                <tr>
+                <th>レンズ</th>
+                <td>
+                    NIKKOR Z 24-70mm f/4 S<br>
+                    NIKKOR Z 70-200mm f/2.8 VR S<br>
+                    マウントアダプター FTZ
+                </td></tr>
+
+                <tr>
+                <th>ストロボ</th>
+                <td>スピードライト SB-800</td>
+                </tr>
+
+                </table>
                 <hr>
 
             <h3 id="info0001">撮影対象</h3>
+            <p>
+                各種スポーツ競技・イベント・スクールフォト
+            </p>
                 <hr>
     </div>
 
