--- a/profile.html
+++ b/profile.html
@@ -50,6 +50,11 @@
                 </tr>
 
                 <tr>
+                    <th></th>
+                    <td></td>
+                </tr>
+
+                <tr>
                 <th>経歴</th>
                 <td>
                 2003年東京生まれ<br>
@@ -64,15 +69,27 @@
             <table>
                 <tr>
                 <th>ボディ</th>
-                <td>Nikon Z 9 , Z 6</td></tr>
+                <td>Nikon Z 9 , Z 6</td>
+                </tr>
 
                 <tr>
+                    <th></th>
+                    <td></td>
+                </tr>
+
+                <tr>                   
                 <th>レンズ</th>
                 <td>
                     NIKKOR Z 24-70mm f/4 S<br>
                     NIKKOR Z 70-200mm f/2.8 VR S<br>
                     マウントアダプター FTZ
-                </td></tr>
+                </td>
+                </tr>
+
+                <tr>
+                    <th></th>
+                    <td></td>
+                </tr>
 
                 <tr>
                 <th>ストロボ</th>
