--- a/profile.html
+++ b/profile.html
@@ -3,6 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <link rel="stylesheet" href="base.css">
+<link rel="stylesheet" href="table.css">
 <title>プロフィール/Profile | iTAP</title>
 </head>
 <body>
@@ -41,18 +42,13 @@
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
             <h3 id="info0003">基本情報</h3>
-            <table>
+            <table class="profile">
                 <tr>
                 <th>名前</th>
                 <td>
                 iTAP(アイタップ)
                 </td>
                 </tr>
-
-                <tr>
-                    <th>        </th>
-                    <td> </td>
-                </tr>''
 
                 <tr>
                 <th>経歴</th>
@@ -66,15 +62,10 @@
             </table>
 
             <h3 id="info0002">所持機材</h3>
-            <table>
+            <table class="profile">
                 <tr>
                 <th>ボディ</th>
                 <td>Nikon Z 9 , Z 6</td>
-                </tr>
-
-                <tr>
-                    <th>        </th>
-                    <td> </td>
                 </tr>
 
                 <tr>                   
@@ -84,11 +75,6 @@
                     NIKKOR Z 70-200mm f/2.8 VR S<br>
                     マウントアダプター FTZ
                 </td>
-                </tr>
-
-                <tr>
-                    <th>        </th>
-                    <td> </td>
                 </tr>
 
                 <tr>
