--- a/contact.html
+++ b/contact.html
@@ -1,11 +1,64 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="base.css">
-<title>お問合せ｜iTAP</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="base.css">
+    <title>お問合せ | iTAP</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51063829-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-51063829-1');
+    </script>
+
 </head>
 <body>
-<h1>お問合せ</h1>
+<div id="pagebody">
+
+    <!-- ヘッダ -->
+    <div id="header">
+    <h1><a href="index.html"><img src="images/logo.png" alt="iTAP"></a></h1>
+    </div>
+
+    <!-- メインメニュー -->
+    <ul id="menu">
+        <li><a href="index.html">ホーム/Home</a></li>
+        <li><a href="gallery.html">ギャラリー/Gallery</a></li>
+        <li><a href="blog.html">ブログ/Blog</a></li>
+        <li><a href="contact.html">お問合せ/Contact</a></li>
+        <li><a href="profile.html">プロフィール/Profile</a></li>
+        </ul>
+
+    <!-- ヘッダ画像 -->
+    <div id="img_index">
+	<img src="./images/img_contact.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+    </div>
+
+    <!-- サブメニュー（左カラム） -->
+	<div id="submenu">
+	    <h2>お問合せ</h2>
+	    <ul>
+		    <li><a href="#info0002">フォームからのお問合せ</a></li>
+            <li><a href="#info0001">メールでのお問合せ</a></li>
+	    </ul>
+    </div>
+
+    <!-- インフォメーション（右カラム） -->
+	<div id="info">
+            <h3 id="info0002">フォームからのお問合せ</h3>
+                <hr>
+
+            <h3 id="info0001">メールでのお問合せ</h3>
+                <hr>
+    </div>
+
+    <!-- フッタ -->     
+    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
+            
+</div>
 </body>
 </html>
