--- a/profile.html
+++ b/profile.html
@@ -1,10 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="base.css">
-<link rel="stylesheet" href="table.css">
-<title>プロフィール/Profile | iTAP</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="table.css">
+    <title>プロフィール/Profile | iTAP</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51063829-1"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-51063829-1');
+    </script>
+
 </head>
 <body>
 <div id="pagebody">
