--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
 
     <!-- ヘッダ画像 -->
     <div id="img_index">
-	<img src="./images/img_contact.png" alt="画像が正しく表示されていません。設定をご確認ください。" width="960" height="540">
+	<img src="./images/img_contact.png" alt="画像が正しく表示されていません。設定をご確認ください。">
     </div>
 
     <!-- サブメニュー（左カラム） -->
