change index to submenu

--- a/contact.html
+++ b/contact.html
@@ -34,7 +34,7 @@
         </ul>
 
     <!-- ヘッダ画像 -->
-    <div id="img_index">
+    <div id="img_subpage">
 	<img src="./images/img_contact.png" alt="画像が正しく表示されていません。設定をご確認ください。">
     </div>
 
