--- a/blog.html
+++ b/blog.html
@@ -1,9 +1,19 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="base.css">
-<title>ブログ｜iTAP</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="base.css">
+    <title>ブログ｜iTAP</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'G-KXSXBWB229');
+    </script>
 </head>
 <body>
 <h1>ブログ</h1>
