--- a/contact.html
+++ b/contact.html
@@ -6,13 +6,13 @@
     <title>お問合せ | iTAP</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51063829-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
 
-      gtag('config', 'UA-51063829-1');
+      gtag('config', 'G-KXSXBWB229');
     </script>
 
 </head>
