--- a/gallery.html
+++ b/gallery.html
@@ -1,11 +1,111 @@
 <!DOCTYPE html>
 <html>
 <head>
-<meta charset="UTF-8">
-<link rel="stylesheet" href="base.css">
-<title>ギャラリー｜iTAP</title>
+    <meta charset="UTF-8">
+    <link rel="stylesheet" href="base.css">
+    <link rel="stylesheet" href="table.css">
+    <title>ギャラリー | iTAP</title>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+    
+      gtag('config', 'G-KXSXBWB229');
+    </script>
+
 </head>
 <body>
-<h1>ギャラリー</h1>
+<div id="pagebody">
+
+    <!-- ヘッダ -->
+    <div id="header">
+    <h1><a href="index.html"><img src="images/logo.png" alt="iTAP"></a></h1>
+    </div>
+
+    <!-- メインメニュー -->
+    <ul id="menu">
+        <li><a href="index.html">ホーム/Home</a></li>
+        <li><a href="gallery.html">ギャラリー/Gallery</a></li>
+        <li><a href="blog.html">ブログ/Blog</a></li>
+        <li><a href="contact.html">お問合せ/Contact</a></li>
+        <li><a href="profile.html">プロフィール/Profile</a></li>
+        </ul>
+
+
+    <!-- ヘッダ画像 -->
+    <div id="img_subpage">
+	<img src="./images/img_profile.png" alt="画像が正しく表示されていません。設定をご確認ください。">
+    </div>
+
+    <!-- サブメニュー（左カラム） -->
+	<div id="submenu">
+	    <h2>ギャラリー</h2>
+	    <ul>
+		    <li><a href="#info0003">基本情報</a></li>
+            <li><a href="#info0002">所持機材</a></li>
+            <li><a href="#info0001">撮影対象</a></li>
+	    </ul>
+    </div>
+
+    <!-- インフォメーション（右カラム） -->
+	<div id="info">
+            <h3 id="info0003">基本情報</h3>
+            <table class="profile">
+                <tr>
+                <th>名前</th>
+                <td>
+                iTAP(アイタップ)
+                </td>
+                </tr>
+
+                <tr>
+                <th>経歴</th>
+                <td>
+                2003年東京生まれ<br>
+                2016より本格的に写真撮影・映像制作を開始<br>
+                高校イベント・空手道大会の撮影・配信を経験<br>
+                Mail：itapmovie@gmail.com
+                </td>
+                </tr>
+            </table>
+
+            <h3 id="info0002">所持機材</h3>
+            <table class="profile">
+                <tr>
+                <th>ボディ</th>
+                <td>Nikon Z 9 , Z 6</td>
+                </tr>
+
+                <tr>                   
+                <th>レンズ</th>
+                <td>
+                    NIKKOR Z 24-70mm f/4 S<br>
+                    NIKKOR Z 70-200mm f/2.8 VR S<br>
+                    マウントアダプター FTZ
+                </td>
+                </tr>
+
+                <tr>
+                <th>ストロボ</th>
+                <td>スピードライト SB-800</td>
+                </tr>
+
+                </table>
+                <hr>
+
+            <h3 id="info0001">撮影対象</h3>
+            <p>
+                各種スポーツ競技・イベント・スクールフォト
+            </p>
+                <hr>
+    </div>
+
+    <!-- フッタ -->     
+    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
+            
+</div>
 </body>
 </html>
