--- a/profile.html
+++ b/profile.html
@@ -7,13 +7,13 @@
     <title>プロフィール/Profile | iTAP</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-51063829-1"></script>
+    <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
     <script>
       window.dataLayer = window.dataLayer || [];
       function gtag(){dataLayer.push(arguments);}
       gtag('js', new Date());
-
-      gtag('config', 'UA-51063829-1');
+    
+      gtag('config', 'G-KXSXBWB229');
     </script>
 
 </head>
