--- a/profile.html
+++ b/profile.html
@@ -75,22 +75,33 @@
             <h3 id="info0002">所持機材</h3>
             <table class="profile">
                 <tr>
-                <th>ボディ</th>
-                <td>Nikon Z 9 , Z 6</td>
+                    <th>ボディ</th>
+                    <td>Nikon Z 9 , Z 6</td>
                 </tr>
 
                 <tr>                   
-                <th>レンズ</th>
-                <td>
-                    NIKKOR Z 24-70mm f/4 S<br>
-                    NIKKOR Z 70-200mm f/2.8 VR S<br>
-                    マウントアダプター FTZ
-                </td>
+                    <th>レンズ</th>
+                    <td>
+                        NIKKOR Z 24-70mm f/4 S<br>
+                        NIKKOR Z 70-200mm f/2.8 VR S<br>
+                        マウントアダプター FTZ
+                    </td>
                 </tr>
 
                 <tr>
-                <th>ストロボ</th>
-                <td>スピードライト SB-800</td>
+                    <th>ストロボ</th>
+                    <td>スピードライト SB-800</td>
+                </tr>
+
+                <tr>                   
+                    <th>オーディオ</th>
+                    <td>
+                        TASCAM DR-07MKII<br>
+                        SENNHEISER E935<br>
+                        SONY MDR-M1ST<br>
+                        SENNHEISER IE 40 PRO<br>
+                        Native Instruments Komplete Audio 6
+                    </td>
                 </tr>
 
                 </table>
