--- a/profile.html
+++ b/profile.html
@@ -65,7 +65,7 @@
                 <th>経歴</th>
                 <td>
                 2003年東京生まれ<br>
-                2016より本格的に写真撮影・映像制作を開始<br>
+                2016年より本格的に写真撮影・映像制作を開始<br>
                 高校イベント・空手道大会の撮影・配信を経験<br>
                 Mail：itapmovie@gmail.com
                 </td>
