--- a/profile.html
+++ b/profile.html
@@ -67,7 +67,7 @@
                 2003年東京生まれ<br>
                 2016年より本格的に写真撮影・映像制作を開始<br>
                 高校イベント・空手道大会の撮影・配信を経験<br>
-                Mail：itapmovie@gmail.com
+                Mail:itapmovie@gmail.com
                 </td>
                 </tr>
             </table>
