--- a/contact.html
+++ b/contact.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="table.css">
+    <link rel="stylesheet" href="form.css">
     <title>お問合せ | iTAP</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
