--- a/contact.html
+++ b/contact.html
@@ -52,40 +52,16 @@
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
             <h3 id="info0002">フォームからのお問合せ</h3>
-            <form method="post" action="xxxxxxxx.php" id="form1" name="form1">
-                <table class="profile">
-                <tr>
-                <th>お問合せ区分</th>
-                <td>
-                    <label><input type="radio" name="sort" value="1">サイト内容に関するお問合せ</label><br>
-                    <label><input type="radio" name="sort" value="2">機材・撮影に関するお問合せ</label><br>
-                    <label><input type="radio" name="sort" value="99">その他のお問合せ</label>
-                </td>
-                </tr>
-                <tr>
-                <th>メールアドレス</th>
-                <td><input type="email" size="30" name="mail" id="mail" required></td>
-                </tr>
-                <tr>
-                <th>お名前</th>
-                <td><input type="text" size="20" name="namae" id="namae" required></td>
-                </tr>
-                <tr>
-                <th>お問合せの内容</th>
-                <td><textarea name="naiyou" cols="40" rows="5" placeholder="できるだけ詳しくご記入ください。" required></textarea></td>
-                </tr>
-                </table>
-                <input type="hidden" name="q" value="1">
-                <p><input type="image" src="images/form_btn.png" alt="送信する"></p>
-                </form>
-
+            <iframe frameborder="0" scrolling="auto" src="https://ssl.form-mailer.jp/fms/f211aa38730274" title="HTML Form" width="100%" height="100%" style="height:600px">
+                <a href="https://ssl.form-mailer.jp/fms/f211aa38730274" title="Contact">この部分はインラインフレームを使用しています</a>
+            </iframe>
                 <hr>
 
             <h3 id="info0001">メールでのお問合せ</h3>
             <p>
                 itapmovie@gmail.com
                 までメールをお送りください。
-                </p>
+            </p>
 
                 <hr>
     </div>
