add cam and lens

--- a/profile.html
+++ b/profile.html
@@ -77,7 +77,11 @@
             <table class="profile">
                 <tr>
                     <th>ボディ</th>
-                    <td>Nikon Z 9 , Z 6</td>
+                    <td>Nikon Z 9<br>
+                        Nikon Z 6<br>
+                        Nikon D90<br>
+                        Nikon F80<br>
+                    </td>
                 </tr>
 
                 <tr>                   
@@ -85,7 +89,10 @@
                     <td>
                         NIKKOR Z 24-70mm f/4 S<br>
                         NIKKOR Z 70-200mm f/2.8 VR S<br>
-                        マウントアダプター FTZ
+                        マウントアダプター FTZ<br>
+                        AF-S DX NIKKOR 18-105mm f/3.5-5.6G ED VR<br>
+                        Ai AF Zoom Nikkor 28～105mm F3.5～4.5D（IF）<br>
+                        SIGMA 30mm F1.4 EX DC HSM
                     </td>
                 </tr>
 
