add profile device

--- a/profile.html
+++ b/profile.html
@@ -73,7 +73,7 @@
             </table>
             <hr>
 
-            <h3 id="info0002">所持機材</h3>
+            <h3 id="info0002">所持機材(随時更新)</h3>
             <table class="profile">
                 <tr>
                     <th>ボディ</th>
