--- a/contact.html
+++ b/contact.html
@@ -64,8 +64,8 @@
                   *お問合せ区分
                 </p>
                 <p>
-                  <input name="field_6315126" type="radio" value="0">サイト内容に関するお問合せ
-                  <input name="field_6315126" type="radio" value="1">機材・撮影に関するお問合せ
+                  <input name="field_6315126" type="radio" value="0">サイト内容に関するお問合せ<br>
+                  <input name="field_6315126" type="radio" value="1">機材・撮影に関するお問合せ<br>
                   <input name="field_6315126" type="radio" value="2">その他のお問合せ
                 </p>
           
