add use softwere

--- a/profile.html
+++ b/profile.html
@@ -112,6 +112,17 @@
                     </td>
                 </tr>
 
+                <tr>                   
+                    <th>使用ソフト</th>
+                    <td>
+                        Adobe Premiere Pro<br>
+                        Adobe After Effects<br>
+                        Adobe Audition<br>
+                        Adobe Photoshop<br>
+                        Adobe Lightroom Classic
+                    </td>
+                </tr>
+
                 </table>
                 <hr>
 
