--- a/profile.html
+++ b/profile.html
@@ -119,7 +119,8 @@
                         Adobe After Effects<br>
                         Adobe Audition<br>
                         Adobe Photoshop<br>
-                        Adobe Lightroom Classic
+                        Adobe Lightroom Classic<br>
+                        Resolume Avenue
                     </td>
                 </tr>
 
