--- a/gallery.html
+++ b/gallery.html
@@ -52,6 +52,18 @@
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
             <h3 id="info0002">映像作品</h3>
+                <p>
+                <img src="images/gallery0001.png" alt="画像" class="infoimg_gallery">
+                </p>
+
+                <p>
+                    <img src="images/gallery0002.png" alt="画像" class="infoimg_gallery">
+                </p>
+
+                <p>
+                    <img src="images/gallery0003.png" alt="画像" class="infoimg_gallery">
+                </p>
+
                 <hr>
 
             <h3 id="info0001">写真作品</h3>
