--- a/index.html
+++ b/index.html
@@ -66,6 +66,11 @@
                 <hr>
     </div>
 
+    <!-- Twitter（右カラム） -->
+	<div id="twitter">
+	    <a class="twitter-timeline" data-lang="ja" data-width="260" data-theme="dark" href="https://twitter.com/iTAP_movie?ref_src=twsrc%5Etfw">Tweets by iTAP_movie</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+    </div>
+
     <!-- フッタ -->     
     <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
             
