--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002"><span style="color:#cccccc;font-size:0.6em;">2021.11.29</span> <span style="font-size:0.6em;">SUPER GT Rd.8 富士スピ…</span></a></li>
-            <li><a href="#info0001"><span style="color:#cccccc;font-size:0.6em;">2021.11.29</span> <span style="font-size:0.6em;">2020TOKYO ブルーインパ…</span></a></li>
+		    <li><a href="#info0002"><span style="color:#5c5c5c;font-size:0.6em;">2021.11.29</span> <span style="font-size:0.6em;">SUPER GT Rd.8 富士スピ…</span></a></li>
+            <li><a href="#info0001"><span style="color:#5c5c5c;font-size:0.6em;">2021.11.29</span> <span style="font-size:0.6em;">2020TOKYO ブルーインパ…</span></a></li>
 	    </ul>
     </div>
 
