--- a/index.html
+++ b/index.html
@@ -42,14 +42,14 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002"><span style="color:#888888;font-size:0.8em;">2021.11.29</span><span style="font-size:0.8em;">>2021 SUPER GT Rd.8 富士…</span></a></li>
-            <li><a href="#info0001"><span style="color:#888888;font-size:0.8em;">2021.7.23</span><span style="font-size:0.8em;"> >2020 TOKYO ブルーインパ…</span></a></li>
+		    <li><a href="#info0002"><span style="color:#888888;font-size:0.8em;"><pre>2021.11.29  </pre></span><span style="font-size:0.8em;">>2021 SUPER GT Rd.8 富…</span></a></li>
+            <li><a href="#info0001"><span style="color:#888888;font-size:0.8em;"><pre>2021.7.23   </pre></span><span style="font-size:0.8em;">>2020 TOKYO ブルーイン…</span></a></li>
 	    </ul>
     </div>
 
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
-            <h3 id="info0002"><span style="color:#888888;font-size:0.8em;">2021.11.29</span>2021 SUPER GT Rd.8 富士スピードウェイ</h3>
+            <h3 id="info0002">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
                 <p>
                 <img src="images/index0002.png" alt="CALSONIC" class="infoimg_index">
                 2021年11月27/28日に富士スピードウェイで開催された、「2021 AUTOBACS SUPER GT ROUND8 FUJIMAKI GROUP FUJI GT300KM RACE」の撮影に行ってまいりました。
@@ -57,7 +57,7 @@
                 </p>
                 <hr>
 
-            <h3 id="info0001"><span style="color:#888888;font-size:0.8em;">2021.7.23 </span>2020 TOKYO ブルーインパルス</h3>
+            <h3 id="info0001">2020 TOKYO ブルーインパルス</h3>
                 <p>
                 <img src="images/index0001.png" alt="2020TOKYO" class="infoimg_index">
                 2021年7月23日の2020東京オリンピック開会式の日に合わせて、航空自衛隊のアクロバット飛行チーム「ブルーインパルス」がスモークを使った飛行を行いました。
