--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 	<div id="submenu">
 	    <h2>新着情報</h2>
 	    <ul>
-		    <li><a href="#info0002"><span style="color:#888888;font-size:0.8em;display:inline-block;width:6em;">2021.11.29</span><span style="font-size:0.8em;">2021 SUPER GT Rd.8 富士スピー…</span></a></li>
+		    <li><a href="#info0002"><span style="color:#888888;font-size:0.8em;display:inline-block;width:6em;">2021.11.29</span><span style="font-size:0.8em;">2021 SUPER GT Rd.8 富士ス…</span></a></li>
             <li><a href="#info0001"><span style="color:#888888;font-size:0.8em;display:inline-block;width:6em;">2021.7.23</span><span style="font-size:0.8em;">2020 TOKYO ブルーインパルス</span></a></li>
 	    </ul>
     </div>
