--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
 	    </ul>
     </div>
 
-    <!-- インフォメーション（右カラム） -->
-	<div id="info">
+    <!-- インフォメーション（中カラム） -->
+	<div id="info_c">
             <p>
             <img src="images/index0002.png" alt="CALSONIC" class="infoimg_index">
             <h3 id="info0002">2021 SUPER GT Rd.8 富士スピードウェイ</h3>
