--- a/index.html
+++ b/index.html
@@ -67,7 +67,8 @@
     </div>
 
     <!-- Twitter（右カラム） -->
-	<div id="twitter">
+	<div id="profile">
+        <img src="images/icon_400x400.png" alt="icon" class="infoimg_profile">
 	    <a class="twitter-timeline" data-lang="en" data-width="260" data-theme="dark" href="https://twitter.com/iTAP_movie?ref_src=twsrc%5Etfw">Tweets by iTAP_movie</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
