--- a/index.html
+++ b/index.html
@@ -69,6 +69,9 @@
     <!-- Twitter（右カラム） -->
 	<div id="profile">
         <img src="images/icon_400x400.png" alt="icon" class="infoimg_profile">
+        <center>iTAP</center>
+        <img src="images/twitter.png" alt="twitter" class="infoimg_twitter_icon">
+        <img src="images/Instagram.png" alt="twitter" class="infoimg_Instagram_icon">
 	    <a class="twitter-timeline" data-lang="en" data-width="260" data-theme="dark" href="https://twitter.com/iTAP_movie?ref_src=twsrc%5Etfw">Tweets by iTAP_movie</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     </div>
 
