--- a/profile.html
+++ b/profile.html
@@ -77,7 +77,7 @@
             <table class="profile">
                 <tr>
                     <th>ボディ</th>
-                    <td>Nikon Z 9<br>
+                    <td><!-- Nikon Z 9<br>-->
                         Nikon Z 6<br>
                         Nikon D90<br>
                         Nikon F80<br>
