--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="base.css">
-    <title>ブログ｜iTAP</title>
+    <title>works｜iTAP</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
@@ -16,6 +16,6 @@
     </script>
 </head>
 <body>
-<h1>ブログ</h1>
+<h1>Works</h1>
 </body>
 </html>
