--- a/contact.html
+++ b/contact.html
@@ -28,12 +28,12 @@
 
     <!-- メインメニュー -->
     <ul id="menu">
-        <li><a href="index.html">ホーム/Home</a></li>
-        <li><a href="gallery.html">ギャラリー/Gallery</a></li>
-        <li><a href="blog.html">ブログ/Blog</a></li>
-        <li><a href="contact.html">お問合せ/Contact</a></li>
-        <li><a href="profile.html">プロフィール/Profile</a></li>
-        </ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="gallery.html">Gallery</a></li>
+      <li><a href="blog.html">Works</a></li>
+      <li><a href="contact.html">Contact</a></li>
+      <li><a href="profile.html">Profile</a></li>
+      </ul>
 
     <!-- ヘッダ画像 -->
     <div id="img_subpage">
