--- a/index.html
+++ b/index.html
@@ -26,11 +26,11 @@
 
     <!-- メインメニュー -->
     <ul id="menu">
-        <li><a href="index.html">ホーム/Home</a></li>
-        <li><a href="gallery.html">ギャラリー/Gallery</a></li>
-        <li><a href="blog.html">ブログ/Blog</a></li>
-        <li><a href="contact.html">お問合せ/Contact</a></li>
-        <li><a href="profile.html">プロフィール/Profile</a></li>
+        <li><a href="index.html">Home</a></li>
+        <li><a href="gallery.html">Gallery</a></li>
+        <li><a href="blog.html">Works</a></li>
+        <li><a href="contact.html">Contact</a></li>
+        <li><a href="profile.html">Profile</a></li>
         </ul>
 
     <!-- ヘッダ画像 -->
