--- a/profile.html
+++ b/profile.html
@@ -64,8 +64,10 @@
                 <th>経歴</th>
                 <td>
                 2003年東京生まれ<br>
-                2016年より本格的に写真撮影・映像制作を開始<br>
-                高校イベント・空手道大会の撮影・配信を経験<br>
+                2022年3月広尾学園高等学校卒業<br>
+                2022年千株式会社と業務委託契約を開始
+                2022年株式会社フォトクリエイトと業務委託契約を開始<br>
+                2023年現在現在筑波大学情報学群に所属<br>
                 Mail:itapmovie@gmail.com
                 </td>
                 </tr>
@@ -76,9 +78,13 @@
             <table class="profile">
                 <tr>
                     <th>ボディ</th>
-                    <td><!-- Nikon Z 9<br>-->
+                    <td>
+                        Nikon Z 9<br>
+                        Nikon Z 8<br>
                         Nikon Z 6<br>
                         Nikon D90<br>
+                        Nikon F3<br>
+                        Nikon FE2<br>
                         Nikon F80<br>
                     </td>
                 </tr>
@@ -88,10 +94,12 @@
                     <td>
                         NIKKOR Z 24-70mm f/4 S<br>
                         NIKKOR Z 70-200mm f/2.8 VR S<br>
+                        NIKKOR Z 50mm f/1.2 S<br>
                         マウントアダプター FTZ<br>
                         AF-S DX NIKKOR 18-105mm f/3.5-5.6G ED VR<br>
                         Ai AF Zoom Nikkor 28～105mm F3.5～4.5D（IF）<br>
                         SIGMA 30mm F1.4 EX DC HSM
+                        etc
                     </td>
                 </tr>
 
@@ -107,6 +115,7 @@
                         SENNHEISER E935<br>
                         SONY MDR-M1ST<br>
                         SENNHEISER IE 40 PRO<br>
+                        SENNHEISER IE 100 PRO<br>
                         Native Instruments Komplete Audio 6
                     </td>
                 </tr>
