--- a/gallery.html
+++ b/gallery.html
@@ -50,10 +50,7 @@
 
     <!-- インフォメーション（右カラム） -->
 	<div id="info">
-            <h4 id="info0002">映像作品</h4>
-                
-
-                <hr>
+            <!-- <h4 id="info0002">映像作品</h4>  -->
 
             <h4 id="info0001">写真作品</h4>
                 <p>
@@ -67,11 +64,10 @@
                 <p>
                 <img src="images/gallery0003.png" alt="画像" class="infoimg_gallery">
                 </p>
-                <hr>
     </div>
 
     <!-- フッタ -->     
-    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
+    <div id="footer"><small>Copyright (c) 2023 iTAP All Rights Reserved.</small></div>
             
 </div>
 </body>
