--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="base.css">
     <link rel="stylesheet" href="table.css">
     <link rel="stylesheet" href="form.css">
-    <title>お問合せ | iTAP</title>
+    <title>お問合せ | iT4P</title>
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
     <script async src="https://www.googletagmanager.com/gtag/js?id=G-KXSXBWB229"></script>
@@ -122,7 +122,7 @@
     </div>
 
     <!-- フッタ -->     
-    <div id="footer"><small>Copyright (c) 2021 iTAP All Rights Reserved.</small></div>
+    <div id="footer"><small>Copyright (c) 2023 iTAP All Rights Reserved.</small></div>
             
 </div>
 </body>
