--- a/gallery.html
+++ b/gallery.html
@@ -54,11 +54,11 @@
 
             <h4 id="info0001">写真作品</h4>
                 <p>
-                <img src="images/gallery0005.png" alt="画像" class="infoimg_gallery">
+                <img src="images/gallery0005.jpg" alt="画像" class="infoimg_gallery">
                 </p>
 
                 <p>
-                <img src="images/gallery0004.png" alt="画像" class="infoimg_gallery">
+                <img src="images/gallery0004.jpg" alt="画像" class="infoimg_gallery">
                 </p>
 
                 <p>
