--- a/gallery.html
+++ b/gallery.html
@@ -62,6 +62,15 @@
                 </p>
 
                 <p>
+                <img src="images/gallery0006.jpg" alt="縦画像" class="infoimg_gallery_vertical">
+                </p>
+    
+                <p>
+                <img src="images/gallery0007.jpg" alt="画像" class="infoimg_gallery">
+                </p>
+    
+
+                <p>
                 <img src="images/gallery0001.png" alt="画像" class="infoimg_gallery">
                 </p>
 
