--- a/gallery.html
+++ b/gallery.html
@@ -68,7 +68,6 @@
                 <p>
                 <img src="images/gallery0007.jpg" alt="画像" class="infoimg_gallery">
                 </p>
-    
 
                 <p>
                 <img src="images/gallery0001.png" alt="画像" class="infoimg_gallery">
@@ -76,6 +75,10 @@
 
                 <p>
                 <img src="images/gallery0002.png" alt="画像" class="infoimg_gallery">
+                </p>
+
+                <p>
+                <img src="images/gallery0008.png" alt="画像" class="infoimg_gallery_vertical">
                 </p>
 
                 <p>
