--- a/gallery.html
+++ b/gallery.html
@@ -78,7 +78,7 @@
                 </p>
 
                 <p>
-                <img src="images/gallery0008.png" alt="画像" class="infoimg_gallery_vertical">
+                <img src="images/gallery0008.jpg" alt="画像" class="infoimg_gallery_vertical">
                 </p>
 
                 <p>
