--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Photo Works</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="#">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
@@ -21,7 +21,7 @@
     </header>
     <main>
         <div class="split left">
-            <a href="#" class="overlay">
+            <a href="photo-works.html" class="overlay">
                 <div class="text">Photo Works</div>
             </a>
         </div>
