--- a/photo-works.html
+++ b/photo-works.html
@@ -22,9 +22,9 @@
     </header>
     <main>
         <section class="gallery">
-            <a href="photo1-large.jpg" data-lightbox="photo-works"><img src="images/gallery0001.png" alt="Photo 1"></a>
-            <a href="photo2-large.jpg" data-lightbox="photo-works"><img src="images/gallery0002.png" alt="Photo 2"></a>
-            <a href="photo3-large.jpg" data-lightbox="photo-works"><img src="images/gallery0003.png" alt="Photo 3"></a>
+            <a href="images/gallery0001.png" data-lightbox="photo-works"><img src="images/gallery0001.png" alt="Photo 1"></a>
+            <a href="images/gallery0002.png" data-lightbox="photo-works"><img src="images/gallery0002.png" alt="Photo 2"></a>
+            <a href="images/gallery0003.png" data-lightbox="photo-works"><img src="images/gallery0003.png" alt="Photo 3"></a>
             <!-- Add more photos as needed -->
         </section>
     </main>
