--- a/photo-works.html
+++ b/photo-works.html
@@ -11,8 +11,8 @@
     <header>
         <nav>
             <ul>
-                <li><a href="#">Home</a></li>
-                <li><a href="#">Photo Works</a></li>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="photo-works.html">Photo Works</a></li>
                 <li><a href="#">Movie Works</a></li>
                 <li><a href="#">Price</a></li>
                 <li><a href="#">Profile</a></li>
@@ -25,7 +25,6 @@
             <a href="images/gallery0001.png" data-lightbox="photo-works"><img src="images/gallery0001.png" alt="Photo 1"></a>
             <a href="images/gallery0002.png" data-lightbox="photo-works"><img src="images/gallery0002.png" alt="Photo 2"></a>
             <a href="images/gallery0003.png" data-lightbox="photo-works"><img src="images/gallery0003.png" alt="Photo 3"></a>
-            <!-- Add more photos as needed -->
         </section>
     </main>
     <footer>
